--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./styles/main.css" />
   </head>
   <body>
+    <main id="container"></main>
     <script src="./scripts/main.js" type="module"></script>
   </body>
 </html>
